--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -34,7 +34,7 @@
                         </header>
           
                         <main class="map__marker-info-main">
-                          <p><a href="#">Lorem ipsum</a> dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, quae eos modi temporibus vitae nesciunt, quia voluptatem repellat recusandae!</p>
+                          <p style="text-align: center; font-weight: bold;">Vrnl Market</p>
                         </main>
                       </div>
           
@@ -56,7 +56,7 @@
                         </header>
           
                         <main class="map__marker-info-main">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, quae eos modi temporibus vitae nesciunt, quia voluptatem repellat <a href="#">recusandae</a>!</p>
+                          <p style="text-align: center; font-weight: bold;">Vrnl Market</p>
                         </main>
           
                       </div>
