--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="faq_iamges_sec">
-      <img class="images_fqa" src="assets/faq_animated.gif" />
+      <img class="images_fqa" src="assets/faq_animated.gif" alt="faq" loading="lazy" />
     </div>
   </div>
 </section>
@@ -46,10 +46,14 @@
                   
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" 
+                                data-bs-toggle="collapse" data-bs-target="#collapseOne" 
+                                aria-expanded="false" aria-controls="collapseOne"
+                                aria-labelledby="headingOne">
                           What is Sports Betting Software?
                         </button>
                       </h2>
+                      
                       <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <p>
@@ -144,21 +148,7 @@ Online player, register your game account online or at a shop, place bets.
                       </div>
                     </div>
 
-                    <!-- <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingEight">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                          What is Sports Betting Software?
-                        </button>
-                      </h2>
-                      <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          <p>
-                            Sports Betting Software is a computer program or application that helps sports bettors to make more informed decisions about their wagers. It can provide data-driven predictions, simulations, and other analysis to help bettors make smarter decisions.
-                           </p>
-
-                        </div>
-                      </div>
-                    </div> -->
+                  
 
                     
                     <div class="accordion-item">
@@ -357,12 +347,13 @@ Online player, register your game account online or at a shop, place bets.
               <div class="wp-faq-schema-wrap wp-faq-schema-">
                 <h2>FAQs about eSports betting software</h2>
           
-                <div role="tablist" class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset">
+                <div role="tablist"  class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset" >
                   <div class="accordion" id="accordionesport">
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading1">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1"
+                        aria-label="collapse1">
                           What eSports titles do you offer ?
                         </button>
                       </h2>
@@ -375,7 +366,8 @@ Online player, register your game account online or at a shop, place bets.
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading2">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2"
+                        aria-label="collapse2">
                           Do you have the Mobile version?
                         </button>
                       </h2>
@@ -391,7 +383,8 @@ Online player, register your game account online or at a shop, place bets.
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading3">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3"
+                        aria-label="collapse3">
                           Can I run a eSports betting platform without dealing with the odds and trading management?
                         </button>
                       </h2>
@@ -485,11 +478,7 @@ The proper management of a eSports betting platform can make this business highl
           </div>
           <div class="x-text x-text-headline e255-e82 m73-1g m73-1j">
             <div class="x-text-content">
-              <!-- <div class="x-text-content-text">
-                  <h3 class="x-text-content-text-primary">
-                    <strong>Other questions?</strong>
-                  </h3>
-                </div> -->
+              
             </div>
           </div>
         </div>
