--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,96 +1,72 @@
-<section class="comp_sol">
-  <div class="comp_details">
-    <!-- first row -->
-    <div class="comp_row">
-      <div class="comp_col">
-        <a target="_blank" href="https://www.gamblingcommission.gov.uk">
-          <img src="assets/gamblingcomm.webp" loading="lazy" alt="gamblingcomm" style="width:88px; margin-left: 5px;" width="88"
-            height="88" />
-        </a>
-      </div>
-      <div class="comp_col_1">
-        <a target="_blank" href="https://gordonmoody.org.uk/">
-          <img class="comp_1" width="88" height="88" src="assets/gordonmoody.webp" loading="lazy" alt="gordonmoody"
-            style="width:88px; margin-left: 8px;" />
-        </a>
-      </div>
-
-
-
-
-
-    </div>
-    <!-- second row -->
-    <div class="comp_row seconcomp_row">
-      <div class="comp_col">
-        <a target="_blank" href="https://www.begambleaware.org/">
-          <img class="comp_2" src="assets/betblocker.webp" loading="lazy" alt="betblocker" style="width:88px;" width="88"
-            height="83" />
-        </a>
-
-      </div>
-      <div class="comp_col_1 ">
-        <a target="_blank" href="https://www.gamstop.co.uk/">
-          <img class="comp_3 secondcomp_col_1" src="assets/gamecare.webp" alt="gamecare" width="86" height="96"
-            style="width:88px;margin-left: 67px; " />
-        </a>
-      </div>
-
-
-
-    </div>
-
-
-
-
-
-    <div class="company_about com">
-      <h1 class="comp_header">Company</h1>
-      <div>
-        <p class="comp_list"><a routerlink="/about-us" aria-label="About" ng-reflect-router-link="/about-us"
-            href="#/about-us">About</a></p>
-      </div>
-      <div>
-        <p class="comp_list"><a routerLink="/online-exchangebook-software" aria-label="sportsbook Provider">Online Exchange Software</a>
-        </p>
-      </div>
-      <div>
-        <a routerLink="/privacy-policy">
-          <p class="comp_list" aria-label="Privacy Policy">Privacy Policy</p>
-        </a>
-      </div>
-      <div>
-        <p class="comp_list"><a routerLink="/contact" aria-label="Contact Us">Contact Us</a></p>
-      </div>
-    </div>
-    <div class="company_about about_left">
-      <h1 class="comp_header">Solutions</h1>
-      <div>
-        <p class="comp_list"><a routerLink="/sports-betting-software" aria-label="Sports Betting software">Sports Betting software</a>
-        </p>
-      </div>
-      <div>
-        <p class="comp_list"><a routerLink="/casino" aria-label="White Label Casino">White Label Casino</a></p>
-      </div>
-      <div>
-        <p class="comp_list"><a routerLink="/white-label-betting-platform" aria-label="White Label Betting
-          Platform">White Label Betting
-            Platform</a></p>
-      </div>
-      <div>
-        <p class="comp_list"><a routerLink="/exchangebook-iframe" aria-label="Sportsbook iFrame">Exchangebook iframe</a></p>
-      </div>
-    </div>
+<section class=comp_sol>
+  <div class=comp_details>
+  <div class=comp_row>
+  <div class=comp_col>
+  <a target=_blank href="https://www.gamblingcommission.gov.uk">
+  <img src="assets/gamblingcomm.webp" loading=lazy alt=gamblingcomm style=width:88px;margin-left:5px width=88 height=88>
+  </a>
   </div>
-</section>
-
-<section>
+  <div class=comp_col_1>
+  <a target=_blank href="https://gordonmoody.org.uk/" >
+  <img class=comp_1 width=88 height=88 src="assets/gordonmoody.webp" loading=lazy alt=gordonmoody style=width:88px;margin-left:8px>
+  </a>
+  </div>
+  </div>
+  <div class="comp_row seconcomp_row">
+  <div class=comp_col>
+  <a target=_blank href="https://www.begambleaware.org/" >
+  <img class=comp_2 src="assets/betblocker.webp" loading=lazy alt=betblocker style=width:88px width=88 height=83>
+  </a>
+  </div>
+  <div class=comp_col_1>
+  <a target=_blank href="https://www.gamstop.co.uk/" >
+  <img class="comp_3 secondcomp_col_1" src="assets/gamecare.webp" loading=lazy alt=gamecare width=86 height=96 style=width:88px;margin-left:67px>
+  </a>
+  </div>
+  </div>
+  <div class="company_about com">
+  <h2 class=comp_header>Company</h2>
+  <div>
+  <p class=comp_list><a routerLink="/about-us" aria-label=About ng-reflect-router-link="/about-us" href="#/about-us">About</a></p>
+  </div>
+  <div>
+  <p class=comp_list><a routerLink="/online-exchangebook-software" aria-label="sportsbook Provider">Online Exchange Software</a>
+  </p>
+  </div>
+  <div>
+  <a routerLink="/privacy-policy">
+  <p class=comp_list aria-label="Privacy Policy">Privacy Policy</p>
+  </a>
+  </div>
+  <div>
+  <p class=comp_list><a routerLink="/contact" aria-label="Contact Us">Contact Us</a></p>
+  </div>
+  </div>
+  <div class="company_about about_left">
+  <h2 class=comp_header>Solutions</h2>
+  <div>
+  <p class=comp_list><a routerLink="/sports-betting-software" aria-label="Sports Betting software">Sports Betting software</a>
+  </p>
+  </div>
+  <div>
+  <p class=comp_list><a routerLink="/casino" aria-label="White Label Casino">White Label Casino</a></p>
+  </div>
+  <div>
+  <p class=comp_list><a routerLink="/white-label-betting-platform" aria-label="White Label Betting
+            Platform">White Label Betting Platform</a></p>
+  </div>
+  <div>
+  <p class=comp_list><a routerLink="/exchangebook-iframe" aria-label="Sportsbook iFrame">Exchangebook iframe</a></p>
+  </div>
+  </div>
+  </div>
+  </section>
+  <section>
   <footer>
-    <div class="footer_sec">
-      <div class="footer_para">
-        <p style="color: rgba(255, 255, 255, .8);"> <a href="https://vrnl.net/#/"><span class="vrnl-net"
-              style="cursor: pointer;">vrnl.net</span></a> 2023 All Rights Reserved</p>
-      </div>
-    </div>
+  <div class=footer_sec>
+  <div class=footer_para>
+  <p style=color:rgba(255,255,255,.8)> <a href="https://vrnl.net/#/" ><span class=vrnl-net style=cursor:pointer>vrnl.net</span></a> 2023 All Rights Reserved</p>
+  </div>
+  </div>
   </footer>
-</section>
+  </section>
