--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -7,6 +7,7 @@
           src="assets/VRNL new LOGO copy.webp" width="106px" height="45px"
           routerLink="/"
           alt="logo"
+          loading="lazy"
         />
 
         <div class="nav_col_1">
@@ -56,7 +57,7 @@
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" aria-label="logo"
-        ><img src="assets/VRNL new LOGO copy.webp" alt="logo" width="106px" height="45px"
+        ><img src="assets/VRNL new LOGO copy.webp" loading="lazy" alt="logo" width="106px" height="45px"
       /></a>
       <button
         class="navbar-toggler"
