--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -1,7 +1,7 @@
 
 <header class="header">
   
-    <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/" alt="logo" width="106px" height="45px">
+    <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/" loading="lazy" alt="logo" width="106px" height="45px">
 
 
   <nav class="navbar">
@@ -84,21 +84,6 @@
               </div>
           </ul>
           </div>
-
-<!--           
-        <div class="next_back">
-
-        
-          <ul  class="res_data_1">
-              <div class="use_list_1" id="panel_3">
-              <li  (click)="animated_1()"><a href=""> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
-              <li><a routerLink="/web3-sportsbook">Web3 Sportsbook</a></li>
-              <li><a routerLink="/web3-casino">Web3 Casino</a></li>
-              <li><a routerLink="/bitcoin-sportsbook">Bitcoin Sportsbook</a></li>
-              <li><a routerLink="/decentralized-sports-betting">Decentralized Sports betting</a></li>
-              </div>
-          </ul>
-          </div> -->
 
 
           <div class="next_back">
