--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -55,7 +55,7 @@
 </div>
 </div>
         <div class="index4-right-img">
-            <img class="lottery_images" src="assets/vrnl image 13.webp" alt="Lottery & Bingo platform">
+            <img class="lottery_images" src="assets/vrnl image 13.webp" loading="lazy" alt="Lottery & Bingo platform">
 
         </div>
 
@@ -66,13 +66,14 @@
 <section class="container12">
 <div class="index4-main-div">
 <div class="index4-left-img">
-    <img class="images_data" src="assets/online-vrnl-1_11zon.webp" alt="lottery games software">
+    <img class="images_data" src="assets/online-vrnl-1_11zon.webp" loading="lazy" alt="lottery games software">
 </div>
 
 <div class="index4-right-text">
      
  
         <h1 class="left-index3-h1" style="font-weight: bold; color: #a0c528;">We Provide Online Turnkey Casino Solutions<br></h1>
+        <ul>
         <li style="color: #4e4c4c;"><strong>Casino White Label Solution</strong></li>
         <p style="margin-left: 24px;    font-family: Raleway, sans-serif !important;">Launch your own branded casino with ease using VRNL's white-label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly.</p>
         <li style="color: #4e4c4c;" ><strong> Website Branding</strong> </li>
@@ -82,7 +83,7 @@
         <li style="color: #4e4c4c;" ><strong>Client Support</strong></li>
         <p style="margin-left: 24px; font-family: Raleway, sans-serif !important;">Enhance your client experience with VRNL's exceptional client support services. Our dedicated team is here to provide expert assistance, ensuring your client's needs are met with efficiency and care.</p>
         
-   
+    </ul>
     
 </div>
 
