--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -11,7 +11,7 @@ Our software is not just about placing bets, it's about creating an experience t
 </div>
 
         <div class="mobile-sports-right"></div>
-            <img class="mobile_images" src="assets/VRNL 211.webp" alt="Mobile sports betting software">
+            <img class="mobile_images" src="assets/VRNL 211.webp" loading="lazy" alt="Mobile sports betting software">
 
     </div>
 </section>
@@ -36,7 +36,7 @@ Our software is not just about placing bets, it's about creating an experience t
         </div>
         
         <div class="mobile-advantages-right">
-            <img src="assets/VRNL 2.webp" alt="mobile sports betting software" class="image_1">
+            <img src="assets/VRNL 2.webp" loading="lazy" alt="mobile sports betting software" class="image_1">
         </div>
 
     </div>
