--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="right-images">
-            <img src="assets/casino image_11zon(1).webp" alt="Image 1">
+            <img src="assets/casino image_11zon(1).webp" loading="lazy" alt="Image 1">
           </div>
     </div>
 
@@ -55,7 +55,7 @@
 <div class="container ">
     <div class="card">
         <div class="flip-box-front"> <a href="https://skyexch.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo1" src="assets/skylogo.png" alt="skylogo"></a>
+            <img class="lb_partner_logo logo1" src="assets/skylogo.png" loading="lazy" alt="skylogo"></a>
            <h4 class="logoname">Skyexch</h4>
             </div>
             <div class="card-content">
@@ -73,7 +73,7 @@
 </div>
     <div class="card">
         <div class="flip-box-front"><a href="https://velki.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo2" src="assets/velkilogo.webp" alt="velkilogo" ></a>
+            <img class="lb_partner_logo logo2" src="assets/velkilogo.webp" loading="lazy" alt="velkilogo" ></a>
             
             <h4 class="logoname " style="    padding-top: 60px;">Velki</h4>
             </div>
@@ -90,46 +90,85 @@
                 </h2>
               </div>
 </div>
-    <div class="card">  
-        <div class="flip-box-front"> <a href="https://gullybet.vrnlexch.com/"target="_blank">
-           <img class="lb_partner_logo logo3" src="assets/gullybet.webp" alt="gullybet" ></a>
-          <h4 class="logoname" style="    padding-top: 45px;">Gullybet</h4>
+
+<div class="card"  >
+  <div class="flip-box-front"> <a href="https://babu365.vrnlexch.com/#/"target="_blank">
+      <img class="lb_partner_logo logo4" src="assets/Babu365.png " loading="lazy" alt="bb88_logo_w_sponsor" ></a>
+     
+      <h4 class="logoname">Babu365</h4>
+      </div>
+      <div class="card-content">
+          <h2>
+            Username : <span id="vrnldemo4">vrnldemo</span>
+            <i class="fas fa-copy" (click)="copytoclip('vrnldemo4')" [style.display]="copyed === 'vrnldemo4' ? 'none' : 'inline'"></i>
+            <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo4'"></i>
+          </h2>
+          <h2>
+            Password : <span id="password4">Asdf1234</span>
+            <i class="fas fa-copy" (click)="copytoclip('password4')" [style.display]="copyed === 'password4' ? 'none' : 'inline'"></i>
+            <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password4'"></i>
+          </h2>
+        </div>
 </div>
-            <div class="card-content">
-                <h2>
-                  Username : <span id="vrnldemo3">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo3')" [style.display]="copyed === 'vrnldemo3' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo3'"></i>
-                </h2>
-                <h2>
-                  Password : <span id="password3">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password3')" [style.display]="copyed === 'password3' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password3'"></i>
-                </h2>
-              </div>
+<div class="card">
+  <div class="flip-box-front">
+    <a href="https://www.cxwelcome.live" target="_blank">
+      <img class="lb_partner_logo logo10" src="assets/cxlogo.webp" loading="lazy" alt="lcexch">
+    </a>
+    <h4 class="logoname">Cxwelcome</h4>
+  </div>
+  <div class="card-content">
+    <h2>
+      Username : <span id="vrnldemo10">vrnldemo</span>
+      <i class="fas fa-copy" (click)="copytoclip('vrnldemo10')" [style.display]="copyed === 'vrnldemo10' ? 'none' : 'inline'"></i>
+      <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo10'"></i>
+    </h2>
+    <h2>
+      Password : <span id="password10">Asdf1234</span>
+      <i class="fas fa-copy" (click)="copytoclip('password10')" [style.display]="copyed === 'password10' ? 'none' : 'inline'"></i>
+      <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password10'"></i>
+    </h2>
+  </div>
 </div>
-    <div class="card"  >
-        <div class="flip-box-front"> <a href="https://babu365.vrnlexch.com/#/"target="_blank">
-            <img class="lb_partner_logo logo4" src="assets/Babu365.png "alt="bb88_logo_w_sponsor" ></a>
-           
-            <h4 class="logoname">Babu365</h4>
-            </div>
-            <div class="card-content">
-                <h2>
-                  Username : <span id="vrnldemo4">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo4')" [style.display]="copyed === 'vrnldemo4' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo4'"></i>
-                </h2>
-                <h2>
-                  Password : <span id="password4">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password4')" [style.display]="copyed === 'password4' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password4'"></i>
-                </h2>
-              </div>
+<div class="card">  
+  <div class="flip-box-front"> <a href="https://gullybet.vrnlexch.com/"target="_blank">
+     <img class="lb_partner_logo logo3" src="assets/gullybet.webp" loading="lazy" alt="gullybet" ></a>
+    <h4 class="logoname" style="    padding-top: 45px;">Gullybet</h4>
+</div>
+      <div class="card-content">
+          <h2>
+            Username : <span id="vrnldemo3">vrnldemo</span>
+            <i class="fas fa-copy" (click)="copytoclip('vrnldemo3')" [style.display]="copyed === 'vrnldemo3' ? 'none' : 'inline'"></i>
+            <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo3'"></i>
+          </h2>
+          <h2>
+            Password : <span id="password3">Asdf1234</span>
+            <i class="fas fa-copy" (click)="copytoclip('password3')" [style.display]="copyed === 'password3' ? 'none' : 'inline'"></i>
+            <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password3'"></i>
+          </h2>
+        </div>
+</div>
+<div class="card">
+  <div class="flip-box-front"><a href="https://9bazi.vrnlexch.com/"target="_blank">
+      <img class="lb_partner_logo logo8" src="assets/logo-bazi.webp" loading="lazy" alt="logo-bazi"></a>
+      <h4 class="logoname">9bazi</h4>
+      </div>
+      <div class="card-content">
+          <h2>
+            Username : <span id="vrnldemo8">vrnldemo</span>
+            <i class="fas fa-copy" (click)="copytoclip('vrnldemo8')" [style.display]="copyed === 'vrnldemo8' ? 'none' : 'inline'"></i>
+            <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo8'"></i>
+          </h2>
+          <h2>
+            Password : <span id="password8">Asdf1234</span>
+            <i class="fas fa-copy" (click)="copytoclip('password8')" [style.display]="copyed === 'password8' ? 'none' : 'inline'"></i>
+            <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password8'"></i>
+          </h2>
+        </div>
 </div>
     <div class="card">
         <div class="flip-box-front">   <a href="https://aura.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo5" src="assets/aura.webp" alt="aura" ></a>
+            <img class="lb_partner_logo logo5" src="assets/aura.webp" loading="lazy" alt="aura" ></a>
          <h4 class="logoname">Aura444</h4>
 </div>
             <div class="card-content">
@@ -147,7 +186,7 @@
 </div>
     <div class="card">
         <div class="flip-box-front"><a href="http://www.diamond.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo6" src="assets/diamond.png" alt="diamond" ></a>
+            <img class="lb_partner_logo logo6" src="assets/diamond.png" loading="lazy" alt="diamond" ></a>
             <h4 class="logoname">Diamond</h4>
             </div>
             <div class="card-content">
@@ -166,7 +205,7 @@
     <div class="card">
         <div class="flip-box-front">
             <a href="https://lotus.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo7" src="assets/lotus.webp" alt="lotus" ></a>
+            <img class="lb_partner_logo logo7" src="assets/lotus.webp" loading="lazy" alt="lotus" ></a>
             <h4 class="logoname">Lotus</h4>
             </div>
             <div class="card-content">
@@ -182,28 +221,11 @@
                 </h2>
               </div>
    </div>
-    <div class="card">
-        <div class="flip-box-front"><a href="https://9bazi.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo8" src="assets/logo-bazi.webp" alt="logo-bazi"></a>
-            <h4 class="logoname">9bazi</h4>
-            </div>
-            <div class="card-content">
-                <h2>
-                  Username : <span id="vrnldemo8">vrnldemo</span>
-                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo8')" [style.display]="copyed === 'vrnldemo8' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo8'"></i>
-                </h2>
-                <h2>
-                  Password : <span id="password8">Asdf1234</span>
-                  <i class="fas fa-copy" (click)="copytoclip('password8')" [style.display]="copyed === 'password8' ? 'none' : 'inline'"></i>
-                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password8'"></i>
-                </h2>
-              </div>
-</div>
+
     <div class="card">
       <div class="flip-box-front">
         <a href="https://world777.vrnlexch.com/" target="_blank">
-          <img class="lb_partner_logo logo9" src="assets/world7777.webp" alt="world7777"></a>
+          <img class="lb_partner_logo logo9" src="assets/world7777.webp" loading="lazy" alt="world7777"></a>
         <h4 class="logoname">World777</h4>
       </div>
       <div class="card-content">
@@ -219,26 +241,7 @@
         </h2>
       </div>
     </div>
-    <div class="card">
-      <div class="flip-box-front">
-        <a href="https://lcexch.vrnlexch.com/" target="_blank">
-          <img class="lb_partner_logo logo10" src="assets/lcexch.webp" alt="lcexch">
-        </a>
-        <h4 class="logoname">Lcexch</h4>
-      </div>
-      <div class="card-content">
-        <h2>
-          Username : <span id="vrnldemo10">vrnldemo</span>
-          <i class="fas fa-copy" (click)="copytoclip('vrnldemo10')" [style.display]="copyed === 'vrnldemo10' ? 'none' : 'inline'"></i>
-          <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo10'"></i>
-        </h2>
-        <h2>
-          Password : <span id="password10">Asdf1234</span>
-          <i class="fas fa-copy" (click)="copytoclip('password10')" [style.display]="copyed === 'password10' ? 'none' : 'inline'"></i>
-          <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password10'"></i>
-        </h2>
-      </div>
-    </div>
+
   </div>
 </div>
 </div>
