--- a/src/app/payment-provider/payment-provider.component.html
+++ b/src/app/payment-provider/payment-provider.component.html
@@ -8,7 +8,7 @@
                     <div class="col-lg-3 col-6">
                         <div class="logo_div">
                             <a href="/">
-                                <img class="img-fluid" alt="logo" style="width: 85%;" src="assets/logo.webp" />
+                                <img class="img-fluid" loading="lazy" alt="logo" style="width: 85%;" src="assets/logo.webp" />
                             </a>
                         </div>
                     </div>
@@ -21,10 +21,10 @@
         <section class="banner_section1">
             <div class="container">
                 <div class="banner_div">
-                    <img src="assets/shape.png" class="img-fluid banner_shape1">
-                    <img src="assets/shape1.png" class="img-fluid banner_shape2">
-                    <img src="assets/shape2.png" class="img-fluid banner_shape3">
-                    <img src="assets/shape3.png" class="img-fluid banner_shape4">
+                    <img src="assets/shape.png" loading="lazy" alt="shape" class="img-fluid banner_shape1">
+                    <img src="assets/shape1.png" loading="lazy" alt="shape" class="img-fluid banner_shape2">
+                    <img src="assets/shape2.png" loading="lazy" alt="shape" class="img-fluid banner_shape3">
+                    <img src="assets/shape3.png" loading="lazy" alt="shape" class="img-fluid banner_shape4">
                     <div class="row">
                         <div class="col-lg-6 col-12">
                             <div class="banner_title1">
@@ -34,8 +34,7 @@
                                 </h1>
                                 <p class="banner_para11">Effortless Payments, Guaranteed Security, Reliable Payment
                                     Gateway For Your Business Needs. Enhance Your High Risk Business With Our Payment Gateways Services In India</p>
-                                <!-- <p>A customized, fully integrated, Omni channel payment solutions provider will help your business to grow by collecting payments from customers easily and securely through any device in any mode. </p> -->
-                                <!-- <h3>One Platform Unlimited Solutions</h3> -->
+                            
                                  <p>
                                         <a href="https://cricpayz.io/" target="_blank" class="request_btn1">Get Started</a> 
                                     </p> 
@@ -43,8 +42,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="banner_img text-center">
-                                <!-- <img src="assets/img/home/imac.png" class="img-fluid dashboard_layout">
-                                    <img src="assets/img/home/character.png" class="img-fluid illustration1"> -->
+                               
                                 <img src="assets/banner_img.png" class="img-fluid" width="550" alt="“best payment 
                                     gateway in india">
                             </div>
@@ -68,7 +66,7 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="payg_div1">
-                                        <img src="assets/easy.svg">
+                                        <img src="assets/easy.svg" alt="easy">
                                         <p>Easy Sign Up </p>
                                         <p>Sign up now to experience the future of payments and offer best checkout
                                             experience </p>
@@ -76,7 +74,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="payg_div1">
-                                        <img src="assets/fast.svg">
+                                        <img src="assets/fast.svg" alt="fast">
                                         <p>Fast and Simple </p>
                                         <p>Easy integration with less code. Fast and secure payments</p>
                                     </div>
@@ -127,10 +125,7 @@
                             <h3><i class="fa fa-shield" aria-hidden="true"></i> Payment Seurity </h3>
                             <p>Solutions that protect every transaction. </p>
                         </div>
-                        <!-- <div class="gatewayfeatures_div">
-                                <p><i class="fa fa-sign-in" aria-hidden="true"></i> Technical Friendly </p>
-                                <p>The ready plugins and SDKs and simple technical documentation makes PayG tech-friendly </p>
-                            </div> -->
+
                     </div>
                 </div>
             </div>
@@ -163,9 +158,9 @@
                                 here for you to take all kinds of payments quickly and securely.
                             </p>
                             <ul>
-                                <li><img src="assets/li.svg" class="img-fluid"> &nbsp; Accepts all payment methods in India </li>
-                                <li><img src="assets/li.svg" class="img-fluid"> &nbsp; Stay protected with the tough security measures </li>
-                                <li><img src="assets/li.svg" class="img-fluid"> &nbsp; Use the most suitable Integration options. </li>
+                                <li><img src="assets/li.svg" alt="li" class="img-fluid"> &nbsp; Accepts all payment methods in India </li>
+                                <li><img src="assets/li.svg" alt="li" class="img-fluid"> &nbsp; Stay protected with the tough security measures </li>
+                                <li><img src="assets/li.svg" alt="li" class="img-fluid"> &nbsp; Use the most suitable Integration options. </li>
                                 <!-- <li><img src="images/li.svg" class="img-fluid"> &nbsp; Pay only for what you see</li> -->
                             </ul>
                             <p class="signup_button">
@@ -181,15 +176,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="container simplify_divstrip text-center">
-                    <ul>
-                        <li>PayG Powerful <br>Dashboard <i class="fa fa-chevron-right" aria-hidden="true"></i></li>
-                        <li>Smart Dynamic <br>Routing  <i class="fa fa-chevron-right" aria-hidden="true"></i></li>
-                        <li>Maximum Payment <br>Options <i class="fa fa-chevron-right" aria-hidden="true"></i></li>
-                        <li>Simple <br>Pricing <i class="fa fa-chevron-right" aria-hidden="true"></i></li>
-                        <li>Easy to use <br>API </li>
-                    </ul>
-                </div> -->
+
         </section>
 
 
@@ -249,26 +236,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-4">
-                            <div class="onboarding_div">
-                                <div class="onboarding_process_div">
-                                    <img src="assets/img/home/payout.svg" />
-                                    <p class="sign_up_para1">PayG Payouts </p>
-                                    <p>Get paid out quickly and easily. Automates your Payouts workflow and handle the complexity of fund transfer and compliance, thus reduce opportunities for human error. </p>
-                                    <p class="text-right"><a class="busines_links" href="payout.html">More &nbsp; <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
-                                </div>
-                            </div>
-                        </div> -->
-                    <!-- <div class="col-lg-4">
-                            <div class="onboarding_div">
-                                <div class="onboarding_process_div">
-                                    <img src="assets/img/home/qr.svg" alt="QR code-based payments">
-                                    <h3 class="sign_up_para1">QR code-based payments </h3>
-                                    <p>Offers the most accepted mobile payment processing solution that enables individuals and businesses to make and receive payments instantly with our Dynamic QR Codes. </p>
-                                    <p class="text-right"><a class="busines_links" href="qrcode-payments.html">More &nbsp; <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
-                                </div>
-                            </div>
-                        </div> -->
+
                 </div>
             </div>
         </section>
@@ -449,10 +417,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <!-- <div class="ready_buttons_div">
-                            <p><a href="" class="create_account_btn">Create Account</a> <a href=""
-                                    class="sales_btn">Contact Sales</a></p>
-                        </div> -->
+
                     </div>
                   
                 </div>
