--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -1,117 +1,1 @@
-<app-header></app-header>
-<section class="sport_iframe_sec">
-    <div class="sports_ifram_row">
-      <div class="sports_if_col">
-        <h1 class="sports_header">Exchangebook iframe
-        </h1>
-        <p class="sports_para">
-          The Exchangebook iframe provides a quick and efficient way to activate the Exchangebook module in just a matter of days through seamless API integration. Furthermore, our comprehensive Exchangebook service, under our expert supervision, guarantees a wide range of programming for online events and markets.
-      </p>
-
-        <button class="button_slide slide_right" routerLink="/contact">
-          <i class="fa-solid fa-phone"></i> Contact us!
-        </button>
-      </div>
-      <div class="sports_if_col_2">
-        <img
-          class="iframe_images"
-          src="assets/vrnl 12.webp"
-          alt="Sportsbook iFrame"
-        />
-      </div>
-    </div>
-  </section>
-
-  <section class="types_sports_sec">
-    <div class="sports_type_row">
-      
-      <div class="sports_col_1">
-        <h1 class="types_header">Types of Exchangebook iframe</h1>
-        <p class="type_para">
-          Our Exchangebook iframe solutions come in three variants, each tailored to the channel used, ensuring the most suitable option for your needs:</p>
-      <ul class="types_list">
-          <li>
-              iFrame for <strong>Desktop</strong>, designed for computers with varying resolutions and featuring diverse and customizable layouts.
-          </li>
-          <li>
-              iFrame for <strong>Terminals and Kiosks SSBT</strong>, with layouts optimized for touchscreen systems and an intuitive user experience, making it ideal for inexperienced players placing bets.
-          </li>
-      </ul>
-      <p class="type_para">
-          Furthermore, through our API, you can achieve extensive customization of graphics and game functions.
-      </p>
-        <br />
-        <br />
-
-        <div class="white_back"></div>
-      </div>
-      <div class="sports_col">
-
-        <img
-        class="types_images"
-        src="assets/vrnl image 4 (1)_11zon.webp"
-        alt="Types of sportsbook iframe"
-      />
-      </div>
-      
-    </div>
-  </section>
-
-  <section class="types_sports_sec_iframe">
-    <div class="sports_type_row">
-      <div class="sports_col_1_iframe">
-        <img class="managed_images" src="assets/VRNL 2.webp" alt="managed sportsbook"/>
-      </div>
-    
-      <div class="sports_col_iframe">
-        <h1 class="types_header">Comprehensive Managed Exchangebook</h1>
-        <p class="type_para">
-            Our Exchangebook iframe encompasses the supply of odds data feeds and the configuration of core betting settings. The software comes equipped with an array of features and tools for independent management of odds margins and configurations. However, if your primary focus is on player management and marketing, we offer fully managed trading services and support.
-        </p>
-
-        <br />
-        <br />
-
-        <div class="white_back"></div>
-      </div>
-      </div>
-  </section>
-
-  <section class="sports_iframes">
-<div class="sport_sol_row">
- 
-  <div class="sport_sol_col_1">
-   
-<h1 class="header_iframes">Acquiring the Exchangebook iframe Solution Is Effortless</h1>
-<p class="gaming_para_iframe">
-    We've streamlined the process for activating the iFrame, encompassing just five simple steps:
-</p>
-<ol class="gaming_para_iframe">
-    <li>
-        Formalize the agreement between Vrnl and the customer.
-    </li>
-    <li>
-        Initiate the Exchangebook iFrame integration via APIs using our SDK.
-    </li>
-    <li>
-        Conduct a meeting to define the Exchangebook strategy to pursue.
-    </li>
-    <li>
-        Identify the most engaging sports and events tailored to your operating area.
-    </li>
-    <li>
-        Let's go live!
-    </li>
-</ol>
-  </div>
-  <div class="sport_sol_col">
-    <img class="i-frame_img1" src="assets/vrnl_iframe.webp" alt="sportsbook iframe">
-      </div>
-</div>
-  </section>
-
- 
- 
-
-
-<app-footer></app-footer>
+<app-header></app-header><section class="sport_iframe_sec"> <div class="sports_ifram_row"> <div class="sports_if_col"> <h1 class="sports_header">Exchangebook iframe </h1> <p class="sports_para"> The Exchangebook iframe provides a quick and efficient way to activate the Exchangebook module in just a matter of days through seamless API integration. Furthermore, our comprehensive Exchangebook service, under our expert supervision, guarantees a wide range of programming for online events and markets. </p> <button class="button_slide slide_right" routerLink="/contact"> <i class="fa-solid fa-phone"></i> Contact us! </button> </div> <div class="sports_if_col_2"> <img class="iframe_images" src="assets/vrnl 12.webp" alt="Sportsbook iFrame" loading="lazy" /> </div> </div> </section> <section class="types_sports_sec"> <div class="sports_type_row"> <div class="sports_col_1"> <h1 class="types_header">Types of Exchangebook iframe</h1> <p class="type_para"> Our Exchangebook iframe solutions come in three variants, each tailored to the channel used, ensuring the most suitable option for your needs:</p> <ul class="types_list"> <li> iFrame for <strong>Desktop</strong>, designed for computers with varying resolutions and featuring diverse and customizable layouts. </li> <li> iFrame for <strong>Terminals and Kiosks SSBT</strong>, with layouts optimized for touchscreen systems and an intuitive user experience, making it ideal for inexperienced players placing bets. </li> </ul> <p class="type_para"> Furthermore, through our API, you can achieve extensive customization of graphics and game functions. </p> <br /> <br /> <div class="white_back"></div> </div> <div class="sports_col"> <img class="types_images" src="assets/vrnl image 4 (1)_11zon.webp" alt="Types of sportsbook iframe" loading="lazy" /> </div> </div> </section> <section class="types_sports_sec_iframe"> <div class="sports_type_row"> <div class="sports_col_1_iframe"> <img class="managed_images" src="assets/VRNL 2.webp" loading="lazy" alt="managed sportsbook" /> </div> <div class="sports_col_iframe"> <h1 class="types_header">Comprehensive Managed Exchangebook</h1> <p class="type_para"> Our Exchangebook iframe encompasses the supply of odds data feeds and the configuration of core betting settings. The software comes equipped with an array of features and tools for independent management of odds margins and configurations. However, if your primary focus is on player management and marketing, we offer fully managed trading services and support. </p> <br /> <br /> <div class="white_back"></div> </div> </div> </section> <section class="sports_iframes"><div class="sport_sol_row"> <div class="sport_sol_col_1"> <h1 class="header_iframes">Acquiring the Exchangebook iframe Solution Is Effortless</h1><p class="gaming_para_iframe"> We've streamlined the process for activating the iFrame, encompassing just five simple steps:</p><ol class="gaming_para_iframe"> <li> Formalize the agreement between Vrnl and the customer. </li> <li> Initiate the Exchangebook iFrame integration via APIs using our SDK. </li> <li> Conduct a meeting to define the Exchangebook strategy to pursue. </li> <li> Identify the most engaging sports and events tailored to your operating area. </li> <li> Let's go live! </li></ol> </div> <div class="sport_sol_col"> <img class="i-frame_img1" src="assets/vrnl_iframe.webp" loading="lazy" alt="sportsbook iframe"> </div></div> </section> <app-footer></app-footer>
