--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -1,179 +1,1 @@
-<app-header></app-header>
-<section class="first-sec">
-
-    <div class="first-head">
-        <h1>Online Exchange Software</h1>
-        <div class="home">
-            <a href="/index.html">Home</a> <span class="dash">-</span> <span class="lil-para">Online Exchange Software</span>
-
-        </div>
-    </div>
-</section>
-<section class="sports_changes">
-<P class="SPORTS_PARA"> We are <span class="typing-text"></span></P>
-</section>
-
-<section class="sport_book_sec">
-<div class="sports_row_1">
-    <div class="sports_book_col">
-<h2 class="sports_book_h1">Online Exchange software
-</h2>
-<p class="sports_param">At VRNL, we take pride in delivering state-of-the-art online Exchange software that redefines the betting experience. We offer a fully functional platform equipped with an extensive selection of live matches available on a monthly basis. With our live streaming options, we'll transform your bookie into an entertainment platform, all backed by certifications from independent gaming laboratories for added assurance.
-
-</p>
-<p class="sports_param">
-  VRNL's Online Exchange Software offers a comprehensive range of sports betting options. Whether you're a fan of cricket, soccer, tennis, or any other sport, we've got you covered. Our platform provides real-time odds, in-play betting, and a user-friendly interface that makes placing bets a breeze.
-</p>
-
-
-<div class="onther_param">
-<h2 class="onther_head">We simplify the process for you to seamlessly integrate into the business.</h2>
-<p class="onther_p1">This theme is highly customizable, and you can experience its flexibility in action:</p>
-<p class="onther_a"><a href=" https://www.lc247.co/  " target="_blank"  class="lc247"><strong> https://www.lc247.co/  </strong></a></p>
-</div>
-
-<div class="onther_btn">
-<button class="hover-1_1 otn_s_1 button_slide slide_right" routerLink="/contact"><i class="fa-solid fa-phone"></i>     Contact us!</button> 
-
-</div>
-    </div>
-
-<div class="sports_book_col_1">
-<img class="Online sportsbook software" src="assets/VRNL 2.webp" alt="Online sportsbook software" width="468 " height="463">
-</div>
-
-</div>
-</section>
-
-<section class="main_feature">
-<div class="fearues_row">
-<div class="features_col">
-<img class="features of Online sportsbook software" src="assets/web3_sports.jpg.webp" alt="Online Exchange software">
-</div>
-<div class="features_col_1">
- <h1 class="feature_header"><span>Online Exchange software</span><strong> Main features</strong></h1> 
- <p class="feature_para">Vrnl is at the forefront of revolutionizing betting and online casino management. With our expertise, you gain access to:</p>  
- <ul class="feature_list">
-    <li><strong>A Global Betting Experience : </strong>
-      VRNL provides access to a comprehensive array of sports, leagues, and betting markets from around the world. With us, you can offer your users a truly global betting experience.
-
-
-    </li>
-    <li><strong>Extensive Pre-Match Options : </strong> 
-      Choose from a vast selection of 150,000 monthly pre-match betting options. We ensure that your platform is stocked with a wide variety of choices to cater to diverse betting preferences.    </li>
-    
-    <li><strong>Thrilling In-Play Opportunities : </strong> 
-      Engage your users with 75,000 monthly in-play opportunities. These real-time betting options add excitement and spontaneity to the betting experience.
-
-    </li>
-    <li><strong>Casino Games for the Metaverse : 
-    </strong>
-    VRNL offers an extensive collection of casino games suitable for the metaverse. Immerse your users in a virtual casino environment with our diverse gaming options.
-    </li>
-
-    <li><strong>Seamless iFrame Integration : </strong>
-      Easily integrate our iFrame into your iGaming platform. Our user-friendly iFrame solution allows you to enhance your platform's capabilities effortlessly.
-    </li>
-
-    <li><strong>Flexible Integration : </strong>
-      Choose your integration method, whether it's through API or iFrame. We provide versatile options to suit your convenience and platform requirements.
-    </li>
-
- </ul>
-</div>
-</div>
-</section>
-
-
-<section class="sportsbook_sec_page">
-<div class="sports_container_1">
-  <h2 class="sports_header_2">Online Exchange software iGaming Casino Platform
-  </h2>
-  <div class="wpb_text_column wpb_content_element ">
-		<div class="wpb_wrapper">
-			<p>We provide a <a style="color: #a0c528;" href="#">White Label Casino</a> solution featuring an extensive library of over 1,000 games.</p>
-<p>Our services include obtaining a gaming license and legal support to kickstart your casino business, ensuring secure and certified gaming math.</p>
-<p>We have singled up the best gaming providers with the aim of offering you the widest selection of&nbsp;live casino games&nbsp;and&nbsp;casino games available online.We've carefully curated partnerships with top gaming providers to offer you an unparalleled variety of live casino games and online casino games, guaranteeing the most extensive selection available.</p>
-
-		</div>
-	</div>
-  <div class="web_3_igaming_img">
-    <img class="web_images" src="assets/vrnl online sportbook software_11zon (1).webp" alt="iGaming Casino Platform" title="Web3 plateform">
-  </div>
-</div>
-
-    </section>
-
-    <section class="crypto-section5-container">
-        <div class="crypto-section5-main">
-      
-      
-          <div class="crypto-section5-left">
-             <h2>Live Casino</h2>
-             <ul class="online_sports_list">
-              <li>Live Game Show</li>
-                <li>First Person games</li>
-                <li>Slots</li>
-                <li>American roulette live</li>
-                <li>Live blackjack</li>
-                <li>Baccarat live</li>
-                <li>Casino Hold’em live</li>
-                <li>SICBO</li>
-                <li>Dragon tiger live</li>
-                <li>Andar Bahar</li>
-                <li>Teen Patti</li>
-             </ul>
-          </div>
-      
-      
-      
-          <div class="crypto-section5-right">
-          <h2>Play at the live casino as if you were directly inside the casino</h2>
-          <img class="live_sec5_imgs" src="assets/vrnl 19_11zon.webp" loading="lazy" alt="Live Casino">
-          </div>
-        </div>
-      
-      </section>
-   
-      <section class="web_page_sec">
-
-        <div class="web3_page_row">
-          <div class="web_page_col">
-      <h1 class="web_3_header">Top online casino providers at World Class</h1>
-      <img class="web_3_imag" src="assets/vrnl online c_11zon (1).webp" loading="lazy" alt="Online Casino">
-          </div>
-          <div class="web_page_col_1">
-           <h1 class="web3_header_2"> Online Casino</h1> 
-           <p class="new-containt">Are you ready to elevate your online casino experience to the next level? Look no further! Vrnl is your one-stop solution for all your online casino needs. We provide top-tier services and cutting-edge solutions for online casino operators, ensuring an unforgettable gaming experience for your players.
-
-           </p>
-           <ul class="user_data_section">
-           
-            <li>Providers 75 + more than</li>
-            <li>Slot machine 15,000 + more than</li>
-            <li>Table games 500 + more than</li>
-            <li>Video poker 700 + more than</li>
-            <li>Other games 200 + more than</li>
-           </ul>
-          </div>
-        </div>
-      </section>
-<section class="crypto-section6-container">
-        <div class="crypto-section6-main">
-      
-      
-          <div class="crypto-section6-left">
-             <h2>Lottery and Bingo Games</h2>
-             <P class="new-containt">At VRNL, we bring the excitement of Lottery and Bingo games to both your screen and your local retail stores. Whether you're a fan of traditional paper tickets or prefer the convenience of playing online, we've got you covered. With us, it's not just about games; it's about the thrill of winning and the joy of playing.</P>
-             <ul class="user_data_section">
-              <li>Bingo 80 + more than</li>
-                <li>Lottery 130 + more than</li>
-             </ul>
-          </div>
-      <div class="crypto-section6-right">
-          <h2>Ultimate Destination for Online and Retail Lottery and Bingo Games</h2>
-          <img class="lottery_img" src="assets/bingo vrnl 13.webp" alt="Lottery and Bingo Games">
-          </div>
-        </div>
-      </section>
-    <app-footer></app-footer>
+<app-header></app-header><section class="first-sec"> <div class="first-head"> <h1>Online Exchange Software</h1> <div class="home"> <a href="/index.html">Home</a> <span class="dash">-</span> <span class="lil-para">Online Exchange Software</span> </div> </div></section><section class="sports_changes"><P class="SPORTS_PARA"> We are <span class="typing-text"></span></P></section><section class="sport_book_sec"><div class="sports_row_1"> <div class="sports_book_col"><h2 class="sports_book_h1">Online Exchange software</h2><p class="sports_param">At VRNL, we take pride in delivering state-of-the-art online Exchange software that redefines the betting experience. We offer a fully functional platform equipped with an extensive selection of live matches available on a monthly basis. With our live streaming options, we'll transform your bookie into an entertainment platform, all backed by certifications from independent gaming laboratories for added assurance.</p><p class="sports_param"> VRNL's Online Exchange Software offers a comprehensive range of sports betting options. Whether you're a fan of cricket, soccer, tennis, or any other sport, we've got you covered. Our platform provides real-time odds, in-play betting, and a user-friendly interface that makes placing bets a breeze.</p><div class="onther_param"><h2 class="onther_head">We simplify the process for you to seamlessly integrate into the business.</h2><p class="onther_p1">This theme is highly customizable, and you can experience its flexibility in action:</p><p class="onther_a"><a href=" https://www.lc247.co/ " target="_blank" class="lc247"><strong> https://www.lc247.co/ </strong></a></p></div><div class="onther_btn"><button class="hover-1_1 otn_s_1 button_slide slide_right" routerLink="/contact"><i class="fa-solid fa-phone"></i> Contact us!</button> </div> </div><div class="sports_book_col_1"><img class="Online sportsbook software" src="assets/VRNL 2.webp" loading="lazy" alt="Online sportsbook software" width="468 " height="463"></div></div></section><section class="main_feature"><div class="fearues_row"><div class="features_col"><img class="features of Online sportsbook software" src="assets/web3_sports.jpg.webp" loading="lazy" alt="Online Exchange software"></div><div class="features_col_1"> <h1 class="feature_header"><span>Online Exchange software</span><strong> Main features</strong></h1> <p class="feature_para">Vrnl is at the forefront of revolutionizing betting and online casino management. With our expertise, you gain access to:</p> <ul class="feature_list"> <li><strong>A Global Betting Experience : </strong> VRNL provides access to a comprehensive array of sports, leagues, and betting markets from around the world. With us, you can offer your users a truly global betting experience. </li> <li><strong>Extensive Pre-Match Options : </strong> Choose from a vast selection of 150,000 monthly pre-match betting options. We ensure that your platform is stocked with a wide variety of choices to cater to diverse betting preferences. </li> <li><strong>Thrilling In-Play Opportunities : </strong> Engage your users with 75,000 monthly in-play opportunities. These real-time betting options add excitement and spontaneity to the betting experience. </li> <li><strong>Casino Games for the Metaverse : </strong> VRNL offers an extensive collection of casino games suitable for the metaverse. Immerse your users in a virtual casino environment with our diverse gaming options. </li> <li><strong>Seamless iFrame Integration : </strong> Easily integrate our iFrame into your iGaming platform. Our user-friendly iFrame solution allows you to enhance your platform's capabilities effortlessly. </li> <li><strong>Flexible Integration : </strong> Choose your integration method, whether it's through API or iFrame. We provide versatile options to suit your convenience and platform requirements. </li> </ul></div></div></section><section class="sportsbook_sec_page"><div class="sports_container_1"> <h2 class="sports_header_2">Online Exchange software iGaming Casino Platform </h2> <div class="wpb_text_column wpb_content_element "><div class="wpb_wrapper"><p>We provide a <a style="color: #a0c528;" href="#">White Label Casino</a> solution featuring an extensive library of over 1,000 games.</p><p>Our services include obtaining a gaming license and legal support to kickstart your casino business, ensuring secure and certified gaming math.</p><p>We have singled up the best gaming providers with the aim of offering you the widest selection of&nbsp;live casino games&nbsp;and&nbsp;casino games available online.We've carefully curated partnerships with top gaming providers to offer you an unparalleled variety of live casino games and online casino games, guaranteeing the most extensive selection available.</p></div></div> <div class="web_3_igaming_img"> <img class="web_images" src="assets/vrnl online sportbook software_11zon (1).webp" loading="lazy" alt="iGaming Casino Platform" title="Web3 plateform"> </div></div> </section> <section class="crypto-section5-container"> <div class="crypto-section5-main"> <div class="crypto-section5-left"> <h2>Live Casino</h2> <ul class="online_sports_list"> <li>Live Game Show</li> <li>First Person games</li> <li>Slots</li> <li>American roulette live</li> <li>Live blackjack</li> <li>Baccarat live</li> <li>Casino Hold’em live</li> <li>SICBO</li> <li>Dragon tiger live</li> <li>Andar Bahar</li> <li>Teen Patti</li> </ul> </div> <div class="crypto-section5-right"> <h2>Play at the live casino as if you were directly inside the casino</h2> <img class="live_sec5_imgs" src="assets/vrnl 19_11zon.webp" loading="lazy" alt="Live Casino"> </div> </div> </section> <section class="web_page_sec"> <div class="web3_page_row"> <div class="web_page_col"> <h1 class="web_3_header">Top online casino providers at World Class</h1> <img class="web_3_imag" src="assets/vrnl online c_11zon (1).webp" loading="lazy" alt="Online Casino"> </div> <div class="web_page_col_1"> <h1 class="web3_header_2"> Online Casino</h1> <p class="new-containt">Are you ready to elevate your online casino experience to the next level? Look no further! Vrnl is your one-stop solution for all your online casino needs. We provide top-tier services and cutting-edge solutions for online casino operators, ensuring an unforgettable gaming experience for your players. </p> <ul class="user_data_section"> <li>Providers 75 + more than</li> <li>Slot machine 15,000 + more than</li> <li>Table games 500 + more than</li> <li>Video poker 700 + more than</li> <li>Other games 200 + more than</li> </ul> </div> </div> </section><section class="crypto-section6-container"> <div class="crypto-section6-main"> <div class="crypto-section6-left"> <h2>Lottery and Bingo Games</h2> <P class="new-containt">At VRNL, we bring the excitement of Lottery and Bingo games to both your screen and your local retail stores. Whether you're a fan of traditional paper tickets or prefer the convenience of playing online, we've got you covered. With us, it's not just about games; it's about the thrill of winning and the joy of playing.</P> <ul class="user_data_section"> <li>Bingo 80 + more than</li> <li>Lottery 130 + more than</li> </ul> </div> <div class="crypto-section6-right"> <h2>Ultimate Destination for Online and Retail Lottery and Bingo Games</h2> <img class="lottery_img" src="assets/bingo vrnl 13.webp" alt="Lottery and Bingo Games"> </div> </div> </section> <app-footer></app-footer>
