--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -1,184 +1,1 @@
-<app-header3></app-header3>
-<section>
-  <div class="sportsbetting-section1-main">
-    <div class="sportsbetting-section1-col1">
-      <h1
-        style="
-          font-family: Raleway, sans-serif;
-          font-weight: 200;
-          font-size: 45px; ">
-        Sports <strong> Betting Software </strong>
-      </h1><p>
-        Are you ready to take your sports betting endeavors to the next level? Look no further than VRNL's sports betting software! In this article, we'll delve deep into the world of sports betting, exploring how VRNL's cutting-edge software can elevate your betting experience. With over two decades of expertise in the industry, VRNL is your trusted partner for sports betting solutions. Join us as we embark on an exciting journey into the realm of sports betting software.
-
-
-
-      </p>
-<p> VRNL's Sports Betting Software offers a world of possibilities for sports enthusiasts and bettors. With a focus on providing accurate, relevant, and helpful information, VRNL combines subject-matter expertise and personal experiences to create a comprehensive betting solution. Trust VRNL to elevate your sports betting experience to new heights.
-</p>
-<p>
-  Explore VRNL's sports betting software today and elevate your betting game to the next level!</p>
-<h3>Try our B2B Betting software</h3>
-      <div class="sportsbetting-section1-col1-link">
-        <a href="https://www.betskyexch.com/" target="_blank" style="font-size: 16px"
-          >https://www.betskyexch.com/</a>
-</div><h3>Try our B2C Betting software</h3>
-      <div class="sportsbetting-section1-col1-link">
-        <a href="https://cricbuzzer.io/" target="_blank" style="font-size: 16px"
-          >https://cricbuzzer.io/</a>
-      </div>
-<div class="sportsbetting-section1-button" >
-        <button routerLink="/contact"  class="animated-button">Book a Demo</button>
-      </div>
-    </div>
- <div class="sportsbetting-section1-col2">
-  <img src="assets/players_11zon.webp" width="100%" alt="Sports Betting">
-    </div>
-  </div>
-</section>
-<section>
-  <div class="sportsbetting-mainfeature-main">
-    <div class="sportsbetting-mainfeature-col1">
-      <img
-        class="sport_images_1"
-        src="assets/vrnl image 4 (1)_11zon.webp"
-        alt="Sports Betting software"
-      />
-    </div>
-<div class="sportsbetting-mainfeature-col2">
-      <h2>Sports Betting software <b> Main features</b></h2>
-      <p>
-        We offer an extensive array of tools to facilitate the management of our betting software. Among these, we highlight the most powerful and, notably, those crucial for competing on the global stage:
-      </p>
-<ul class="bet_page_list">
-        <li>
-          <strong> Real-Time Odds</strong> Stay updated with real-time odds that give you the competitive edge. VRNL's software ensures you never miss out on the best opportunities.
-        </li>
-<li>
-          <strong> Mobile Compatibility
-          </strong> Bet on the go with VRNL's mobile-compatible software. Whether you use iOS or Android, the platform adapts to your device for a seamless experience.
-        </li>
-<li>
-          <strong> Advanced Odds Service</strong> redefines sports data APIs. It offers 100% accurate pre-match odds and the fastest live data odds feeds with minimal latency.</li>
- <li> <strong> Flexible Integration</strong> Our platform can be seamlessly integrated into your system via API or iFrame, offering versatility in implementation.</li>
-      </ul>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="sportsbetting-benefits-main">
-    <div class="sportsbetting-benefits">
-      <h3>
-        Which will be the benefits?
-        <b> Let us Explain</b>
-      </h3>
-<p><strong>
-          The advantage of running Online and Retail betting platform
-        </strong>
-        Starting an online betting platform can indeed be challenging. 
-      </p><p>
-        That's why we've designed a
-        <strong>comprehensive sports betting software </strong> environment to make the process smoother, complete with top-notch odds providers to offer you the broadest coverage.
-      </p><p>
-        Our regulated partners receive full support for their entry into the online betting industry, along with the option of Branded or Non-Branded versions of our platforms.
-      </p><p>
-        Our software includes robust risk management tools, making it quick and straightforward to set up, and it's prepared to scale as your business expands.
-      </p><p>
-        Managing
-        <strong> online players and betting shops </strong> has never been this straightforward and user-friendly.</p>
-    </div>
-<div class="sportsbetting-benefits-image">
-      <img
-        class="images_benefit_1"
-        src="assets/vrnl image 52_11zon.webp"
-        alt="complete Sports betting software"
-      />
-    </div>
-  </div>
-</section>
-<section>
-  <div class="sportsbetting-complete-sports-main">
-    <div class="sportsbetting-complete-sports-col1">
-      <h2>Complete Sports <strong> Betting software </strong></h2>
-      <p>What have we got for you?</p>
-      <ul>
-       <li>
-          <strong>Player Account Controls </strong> Our platform provides robust player account management, including registration and verification services. We also have an effective system in place to detect and address fraudulent accounts.
-        </li>
-        <li> <strong>Geolocation Tools </strong>We offer tools that can extract location information from IP addresses, ensuring accurate geolocation services.</li>
-      </ul>
-      <p>
-        With our comprehensive support, your primary focus can be on establishing and developing your retail betting shops and online networks.
-      </p>
-    </div>
-<div class="sportsbetting-complete-sports-col2">
-      <img
-        src="assets\football image 3.webp"
-
-        class="web3_img"
-        alt="sports betting"
-      />
-    </div>
-  </div>
-</section>
-<section>
-  <div class="sportsbetting-crypto-sports-main">
-    <div class="sportsbetting-crypto-sports-col1">
-      <img class="phone_images" src="assets/Sirplay image 9.webp" alt="B2C sports betting" />
-    </div>
-    <div class="sportsbetting-crypto-sports-col2">
-      <h2>B2C sports betting software</h2>
-      <p>
-        VRNL is your premier destination for B2C sports betting software solutions. We are a trusted name in the industry, dedicated to delivering cutting-edge software that enhances your sports betting experience. Whether you're a seasoned bettor or a newcomer to the world of sports wagering, we've got the tools you need to elevate your game. Try VRNL's sports betting software today and elevate your betting game to the next level!
-      </p>
-      <p>
-        B2C (business-to-consumer) sports betting software refers to the technology and platform used by sportsbook operators to offer sports betting services directly to end-users.<br />
-      </p><p>
-        This type of software enables consumers to place bets on various sports events through web or mobile applications. Here are some key features and components typically found in B2C sports betting software:
-      </p><ul> <li>
-          <b>User Registration and Account Management:</b> Allows users to
-          create accounts, manage personal information, and track betting
-          history.
-        </li>
-        
-        <li>
-          <b>Customer Support:</b> Provides customer support options, such as
-          live chat, email, and phone support, to assist users with inquiries
-          and issues.
-        </li>
-        <li>
-          <b>Affiliate Programs:</b> Offers affiliate programs for marketing and
-          promotion, allowing partners to earn commissions for referring users.
-        </li>
-      </ul>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="sportsbetting-betting-software-main">
-    <div class="sportsbetting-betting-software-col1">
-      <h2>Casino and Sports <strong>Betting software </strong></h2>
-      <p>
-        Providers 75 + more than<br />
-        Slot machine 15,000 + more than<br />
-        Table games 500 + more than<br />
-        Video poker 700 + more than<br />
-        Other games 200 + more than<br />
-        Live Game Show<br />
-        First Person games<br />
-        American roulette live<br />
-        Live blackjack<br />
-        Baccarat live<br />
-        Casino Hold’em live<br />
-        SICBO<br />
-        Dragon tiger live<br />
-        Andar Bahar<br />
-        Teen Patti
-      </p>
-    </div>
-    <div class="sportsbetting-betting-software-col2">
-      <img class="addverties_img" src="assets/vrnl online c_11zon (1).webp" loading="lazy" alt="Betting software" />
-    </div>
-  </div>
-</section>
-<app-footer></app-footer>
+<app-header3></app-header3><section> <div class="sportsbetting-section1-main"> <div class="sportsbetting-section1-col1"> <h1 style=" font-family: Raleway, sans-serif; font-weight: 200; font-size: 45px; "> Sports <strong> Betting Software </strong> </h1><p> Are you ready to take your sports betting endeavors to the next level? Look no further than VRNL's sports betting software! In this article, we'll delve deep into the world of sports betting, exploring how VRNL's cutting-edge software can elevate your betting experience. With over two decades of expertise in the industry, VRNL is your trusted partner for sports betting solutions. Join us as we embark on an exciting journey into the realm of sports betting software. </p><p> VRNL's Sports Betting Software offers a world of possibilities for sports enthusiasts and bettors. With a focus on providing accurate, relevant, and helpful information, VRNL combines subject-matter expertise and personal experiences to create a comprehensive betting solution. Trust VRNL to elevate your sports betting experience to new heights.</p><p> Explore VRNL's sports betting software today and elevate your betting game to the next level!</p><h3>Try our B2B Betting software</h3> <div class="sportsbetting-section1-col1-link"> <a href="https://www.betskyexch.com/" target="_blank" style="font-size: 16px" >https://www.betskyexch.com/</a></div><h3>Try our B2C Betting software</h3> <div class="sportsbetting-section1-col1-link"> <a href="https://cricbuzzer.io/" target="_blank" style="font-size: 16px" >https://cricbuzzer.io/</a> </div><div class="sportsbetting-section1-button" > <button routerLink="/contact" class="animated-button">Book a Demo</button> </div> </div> <div class="sportsbetting-section1-col2"> <img src="assets/players_11zon.webp" width="100%" loading="lazy" alt="Sports Betting"> </div> </div></section><section> <div class="sportsbetting-mainfeature-main"> <div class="sportsbetting-mainfeature-col1"> <img class="sport_images_1" src="assets/vrnl image 4 (1)_11zon.webp" loading="lazy" alt="Sports Betting software" /> </div><div class="sportsbetting-mainfeature-col2"> <h2>Sports Betting software <b> Main features</b></h2> <p> We offer an extensive array of tools to facilitate the management of our betting software. Among these, we highlight the most powerful and, notably, those crucial for competing on the global stage: </p><ul class="bet_page_list"> <li> <strong> Real-Time Odds</strong> Stay updated with real-time odds that give you the competitive edge. VRNL's software ensures you never miss out on the best opportunities. </li><li> <strong> Mobile Compatibility </strong> Bet on the go with VRNL's mobile-compatible software. Whether you use iOS or Android, the platform adapts to your device for a seamless experience. </li><li> <strong> Advanced Odds Service</strong> redefines sports data APIs. It offers 100% accurate pre-match odds and the fastest live data odds feeds with minimal latency.</li> <li> <strong> Flexible Integration</strong> Our platform can be seamlessly integrated into your system via API or iFrame, offering versatility in implementation.</li> </ul> </div> </div></section><section> <div class="sportsbetting-benefits-main"> <div class="sportsbetting-benefits"> <h3> Which will be the benefits? <b> Let us Explain</b> </h3><p><strong> The advantage of running Online and Retail betting platform </strong> Starting an online betting platform can indeed be challenging. </p><p> That's why we've designed a <strong>comprehensive sports betting software </strong> environment to make the process smoother, complete with top-notch odds providers to offer you the broadest coverage. </p><p> Our regulated partners receive full support for their entry into the online betting industry, along with the option of Branded or Non-Branded versions of our platforms. </p><p> Our software includes robust risk management tools, making it quick and straightforward to set up, and it's prepared to scale as your business expands. </p><p> Managing <strong> online players and betting shops </strong> has never been this straightforward and user-friendly.</p> </div><div class="sportsbetting-benefits-image"> <img class="images_benefit_1" src="assets/vrnl image 52_11zon.webp" loading="lazy" alt="complete Sports betting software" /> </div> </div></section><section> <div class="sportsbetting-complete-sports-main"> <div class="sportsbetting-complete-sports-col1"> <h2>Complete Sports <strong> Betting software </strong></h2> <p>What have we got for you?</p> <ul> <li> <strong>Player Account Controls </strong> Our platform provides robust player account management, including registration and verification services. We also have an effective system in place to detect and address fraudulent accounts. </li> <li> <strong>Geolocation Tools </strong>We offer tools that can extract location information from IP addresses, ensuring accurate geolocation services.</li> </ul> <p> With our comprehensive support, your primary focus can be on establishing and developing your retail betting shops and online networks. </p> </div><div class="sportsbetting-complete-sports-col2"> <img src="assets\football image 3.webp" class="web3_img" loading="lazy" alt="sports betting" /> </div> </div></section><section> <div class="sportsbetting-crypto-sports-main"> <div class="sportsbetting-crypto-sports-col1"> <img class="phone_images" src="assets/Sirplay image 9.webp" loading="lazy" alt="B2C sports betting" /> </div> <div class="sportsbetting-crypto-sports-col2"> <h2>B2C sports betting software</h2> <p> VRNL is your premier destination for B2C sports betting software solutions. We are a trusted name in the industry, dedicated to delivering cutting-edge software that enhances your sports betting experience. Whether you're a seasoned bettor or a newcomer to the world of sports wagering, we've got the tools you need to elevate your game. Try VRNL's sports betting software today and elevate your betting game to the next level! </p> <p> B2C (business-to-consumer) sports betting software refers to the technology and platform used by sportsbook operators to offer sports betting services directly to end-users.<br /> </p><p> This type of software enables consumers to place bets on various sports events through web or mobile applications. Here are some key features and components typically found in B2C sports betting software: </p><ul> <li> <b>User Registration and Account Management:</b> Allows users to create accounts, manage personal information, and track betting history. </li> <li> <b>Customer Support:</b> Provides customer support options, such as live chat, email, and phone support, to assist users with inquiries and issues. </li> <li> <b>Affiliate Programs:</b> Offers affiliate programs for marketing and promotion, allowing partners to earn commissions for referring users. </li> </ul> </div> </div></section><section> <div class="sportsbetting-betting-software-main"> <div class="sportsbetting-betting-software-col1"> <h2>Casino and Sports <strong>Betting software </strong></h2> <p> Providers 75 + more than<br /> Slot machine 15,000 + more than<br /> Table games 500 + more than<br /> Video poker 700 + more than<br /> Other games 200 + more than<br /> Live Game Show<br /> First Person games<br /> American roulette live<br /> Live blackjack<br /> Baccarat live<br /> Casino Hold’em live<br /> SICBO<br /> Dragon tiger live<br /> Andar Bahar<br /> Teen Patti </p> </div> <div class="sportsbetting-betting-software-col2"> <img class="addverties_img" src="assets/vrnl online c_11zon (1).webp" loading="lazy" alt="Betting software" /> </div> </div></section><app-footer></app-footer>
